# agents

3_crew/coder/knowledge/: user_preference.txt
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate_local/: README.md  pyproject.toml
3_crew/debate_local/src/debate_local/: crew.py  main.py
