[project]
name = "debate_local"
version = "0.1.0"
description = "debate_local using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
debate_local = "debate_local.main:run"
run_crew = "debate_local.main:run"
train = "debate_local.main:train"
replay = "debate_local.main:replay"
test = "debate_local.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
